--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "yargs": "^17.7.2"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "discord.js": "^14.15.3",
     "magmastream": "^2.5.11",
     "prisma": "^5.17.0"
