chore: use corepack

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "engines": {
     "node": ">=22.0.0",
-    "pnpm": ">=9.6.0"
+    "pnpm": ">=9.7.0"
   },
   "repository": {
     "type": "git",
@@ -43,5 +43,6 @@
     "discord.js": "^14.15.3",
     "magmastream": "^2.5.11",
     "prisma": "^5.18.0"
-  }
+  },
+  "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
 }
