feat: some db things

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ LAVALINK_PORT=""
 LAVALINK_TOKEN=""
 
 # Database
-DATABASE_URL="postgresql://[username]:[password]@[ip]:[port]/[database]?schema=public"
+DATABASE_URI="postgresql://[username]:[password]@[ip]:[port]/[database]?schema=public"
