--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     },
     "include": [
         "src/**/*.ts",
-        "eslint.config.js",
-        "jest.config.js"
+        "eslint.config.js"
     ],
+    "exclude": ["node_modules"]
 }
