--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^2.7.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.5.4",
     "@types/yargs": "^17.0.33",
     "dotenv": "^16.4.5",
     "eslint": "^9.9.1",
@@ -36,6 +36,7 @@
     "yargs": "^17.7.2"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.55",
     "@prisma/client": "5.19.0",
     "axios": "^1.7.7",
     "canvacord": "^6.0.2",
