chore: fix literally everything

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DISCORD_TOKEN=""
 # LavaLink
 LAVALINK_URL=""
 LAVALINK_TOKEN=""
+LAVALINK_LASTFM_API_KEY=""
 
 # Database
 DATABASE_URI="postgresql://[username]:[password]@[ip]:[port]/[database]?schema=public"
