--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "homepage": "https://github.com/DamienVesper/SuroiBot#readme",
   "devDependencies": {
     "@stylistic/eslint-plugin": "^2.13.0",
+    "@types/bun": "^1.2.10",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.15.2",
     "@types/yargs": "^17.0.33",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.1",
