--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ LAVALINK_TOKEN=""
 LAVALINK_LASTFM_API_KEY=""
 
 # Database
-DATABASE_URI="postgresql://[username]:[password]@[ip]:[port]/[database]?schema=public"
+DATABASE_URL="postgresql://[username]:[password]@[ip]:[port]/[database]?schema=public"
