--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "bun dist/index.js",
-    "dev": "bun ./src/index.ts",
+    "start": "bun --bun dist/index.js",
+    "dev": "bun --bun ./src/index.ts",
     "lint": "eslint . --fix",
     "ci:lint": "eslint . --fix"
-  },
-  "engines": {
-    "node": ">=22.0.0"
   },
   "repository": {
     "type": "git",
@@ -26,22 +23,24 @@
   "homepage": "https://github.com/DamienVesper/SuroiBot#readme",
   "devDependencies": {
     "@stylistic/eslint-plugin": "^2.13.0",
-    "@types/bun": "^1.2.10",
-    "@types/eslint__js": "^8.42.3",
+    "@types/bun": "^1.2.11",
+    "@types/eslint__js": "^9.14.0",
+    "@types/pg": "^8.11.14",
     "@types/yargs": "^17.0.33",
     "dotenv": "^16.5.0",
+    "drizzle-kit": "^0.31.0",
     "eslint": "^9.25.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0",
+    "typescript-eslint": "^8.31.1",
     "yargs": "^17.7.2"
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.69",
-    "@prisma/client": "5.19.0",
     "axios": "^1.9.0",
     "canvacord": "^6.0.2",
-    "discord.js": "^14.19.1",
+    "discord.js": "^14.19.2",
+    "drizzle-orm": "^0.43.1",
     "magmastream": "^2.8.6",
-    "prisma": "^5.22.0"
+    "pg": "^8.15.6"
   }
 }
