--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     },
     "include": [
         "src/**/*.ts",
+        "drizzle.config.ts",
         "eslint.config.js"
     ],
     "exclude": ["node_modules"]
