feat: lb, caching

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,11 @@ LAVALINK_URL=""
 LAVALINK_TOKEN=""
 LAVALINK_LASTFM_API_KEY=""
 
-# Database
+# PostgreSQL
 DATABASE_URL="postgresql://[username]:[password]@[ip]:[port]/[database]?schema=public"
+
+# Redis
+REDIS_URL="redis://[username]:[password]@[ip]:[port]"
+
+# Suroi API
+SUROI_API_KEY=""
