--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "bun --bun dist/index.js",
     "dev": "bun --bun ./src/index.ts",
     "lint": "eslint . --fix",
-    "ci:lint": "eslint . --fix"
+    "ci:lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -22,24 +22,23 @@
   },
   "homepage": "https://github.com/DamienVesper/SuroiBot#readme",
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.13.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "@types/bun": "^1.2.13",
-    "@types/pg": "^8.15.1",
+    "@types/pg": "^8.15.2",
     "@types/yargs": "^17.0.33",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.26.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0",
+    "typescript-eslint": "^8.32.1",
     "yargs": "^17.7.2"
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.70",
     "axios": "^1.9.0",
-    "canvacord": "^6.0.2",
     "discord.js": "^14.19.3",
     "drizzle-orm": "^0.43.1",
-    "magmastream": "^2.8.6",
-    "pg": "^8.15.6"
+    "magmastream": "^2.8.7",
+    "pg": "^8.16.0"
   }
 }
