--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "type": "module",
   "scripts": {
     "build": "bun --bun tsc",
-    "start": "bun --bun dist/index.js",
+    "build:db": "bun --bun tsc --project tsconfig.drizzle.json",
+    "db:generate": "bun --bun drizzle-kit generate --config drizzle/drizzle.config.js",
+    "db:push": "bun --bun drizzle-kit push --config drizzle/drizzle.config.js",
     "dev": "bun --bun ./src/index.ts",
     "lint": "eslint . --fix",
-    "ci:lint": "eslint ."
+    "lint:ci": "eslint .",
+    "start": "bun --bun dist/index.js"
   },
   "repository": {
     "type": "git",
