perf stuff + start suroi api

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: bun install
 
       - name: Lint
-        run: bun ci:lint
+        run: bun lint:ci
 
       - name: Build
         run: bun run build
